--- a/bin/setup.cfg
+++ b/bin/setup.cfg
@@ -47,15 +47,13 @@ git checkout
    - check out master
 
 
-
 git remote
-    - add to github
-    - make a second remote
+    - add to github {origin}
+    - make a second remote {secondary}
 
 
 git branch
     - create a second branch: git checkout -b feature/other-branch
-
 
 
 git push
@@ -71,20 +69,41 @@ git diff
 
 git merge
     - merge a branch with out issue
-    
+
 
 git merge conflicts
+    - with terminal
+    - with sourcetree
+
+
 git rebase
+    - https://www.lurklurk.org/gitpix/rebase.png
+
+
 git clone
+    - clone project to new folder
+
+
 git pull
+    - make changes on {one} then pull to {two}
+
+
 git fetch
+    - git merge origin/master
+    - make changes on {two} and fetch to {one}
+    - git merge origin/master
+
 git rm and mv
+
 git patch apply
+
 git stash
+
 git reset
+
 git tag
 
-
+git cherry-pick
 
 
 
