--- a/bin/setup.cfg
+++ b/bin/setup.cfg
@@ -93,15 +93,26 @@ git fetch
     - make changes on {two} and fetch to {one}
     - git merge origin/master
 
+
+git reset
+    - make change to a file add then reset
+    - reset --hard
+
+
 git rm and mv
+    - 
+
 
 git patch apply
 
+
 git stash
 
-git reset
+
+
 
 git tag
+
 
 git cherry-pick
 
@@ -109,4 +120,3 @@ git cherry-pick
 
 ? git notes 
 ? git shortlog 
-xxx
