--- a/bin/setup.cfg
+++ b/bin/setup.cfg
@@ -3,15 +3,17 @@ git help
     - git help <command>
 
 
+
 git init
     - init one
-    - init two up a level
     - master vs main
+
 
     
 git config
     -  git --no-pager config --list --local
     -  git --no-pager config --list --global
+
 
 
 git add
@@ -21,9 +23,12 @@ git add
     - git add -p
 
 
+
 git commit
     - git commit -m "first"
-    - git commit {EDITOR}
+    - git commit {EDITOR=vim}
+    - git commit --amend
+
 
 
 git log
@@ -34,12 +39,15 @@ git log
    - lg3 = log --graph --abbrev-commit --decorate --date=relative --format=format:'%C(bold blue)%h%C(reset) - %C(bold green)(%ar)%C(reset)  %C(white)%s%C(reset) %C(dim white) - %an%C(reset)%C(bold yellow)%d%C(reset)%n%b' --all
 
 
+
 git alias
     - uncomment lg{,1,2,3}
 
 
+
 git file structure
     - show the .git directory
+
 
 
 git checkout
@@ -47,18 +55,26 @@ git checkout
    - check out master
 
 
+
 git remote
     - add to github {origin}
     - make a second remote {secondary}
 
 
+
 git branch
     - create a second branch: git checkout -b feature/other-branch
+    - make change
+    - checkout master
+    - show diff
+    - back to feature/other-branch
+
 
 
 git push
     - push to origin
     - push to other location
+
 
 
 git diff
@@ -67,8 +83,11 @@ git diff
     - show diff other branch
 
 
+
 git merge
     - merge a branch with out issue
+    - git merge --no-commit
+
 
 
 git merge conflicts
@@ -76,16 +95,20 @@ git merge conflicts
     - with sourcetree
 
 
+
 git rebase
     - https://www.lurklurk.org/gitpix/rebase.png
+
 
 
 git clone
     - clone project to new folder
 
 
+
 git pull
     - make changes on {one} then pull to {two}
+
 
 
 git fetch
@@ -96,27 +119,68 @@ git fetch
 
 git reset
     - make change to a file add then reset
-    - reset --hard
+    - rest file
+    - reset --hard HEAD
+
 
 
 git rm and mv
-    - 
+    - filesystem remove file - show status 
+    - git rm file - show status
 
 
-git patch apply
+
+git apply
+    - make change do not commit
+    - diff to file
+    - checkout file
+    - git apply xxx.git
+    - show diff
+
 
 
 git stash
-
+    - git stash save "first stash"
+    - git stash list
+    - git stash save "second stash"
+    - git diff "stash@{0}"
+    - git diff "stash@{1}"
+    - git stash apply
+    - git stash drop
+    - git add .
+    - git stash pop
+    - **** what now ****
 
 
 
 git tag
+    - git tag help
+    - **** what now ****
+    - ???
+
 
 
 git cherry-pick
+    - checkout bach to master
+    - show diff
+    - show log
+    - make change on master
+    - show diff/log
 
 
 
-? git notes 
-? git shortlog 
+git hooks
+    - auth message
+    - commit
+
+
+
+git bisect 
+    - 1485  git bisect start
+    - 1486  git bisect bad
+    - 1488  git bisect good 33da1a7f085ab43fa961ab76f7bf6783679f5eee
+    - 1491  git bisect bad
+    - 1493  git bisect good
+    - 1494  git bisect reset
+
+
